cabal-version: 3.0

-- The name of the package.
name:                moment

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Moment - The time for workload

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Raciel Hernández Barroso

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          racherb@protonmail.com

-- A copyright notice.
-- copyright:

category:            Development

build-type:          Simple

--Stability
stability:           Experimental

--Homepage
homepage:            https://github.com/racherb/moment

flag documentation
    default: True

library

  if flag(documentation)
      build-depends: hscolour == 1.24.*

  -- Modules exported by the library.
  exposed-modules:     Moment.Types,
                       Moment.Parse,
                       Moment.Calendar.Internals,
                       Moment.Calendar.DaysCalendar

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    GADTs, DeriveFunctor

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.12 && <4.15,
                       time >=1.8.2 && <1.9.4,
                       unix >=2.7.2 && <2.8,
                       vector >=0.12.1 && < 0.12.1.3,
                       vector-algorithms >= 0.8.0.2 && < 0.8.0.4

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010
