cabal-version:       >=1.8
name:                moment
version:             0.1.0.0
synopsis:            Moment - The time for workload
-- description:
license:             MIT
license-file:        LICENSE
author:              Raciel Hernández Barroso
maintainer:          racherb@protonmail.com
copyright:           Raciel 2020
category:            Development
build-type:          Simple
stability:           Experimental
homepage:            https://github.com/racherb/moment

flag documentation
    default: True

library

  if flag(documentation)
      build-depends: hscolour == 1.24.*

  -- Modules exported by the library.
  exposed-modules:     Moment.Calendar.Internals,
                       Moment.Calendar.DaysCalendar

  -- Modules included in this library but not exported.
  other-modules:       Moment.Prelude,
                       Moment.Types,
                       Moment.Parse

  -- LANGUAGE extensions used by modules in this package.
  --other-extensions:    GADTs, DeriveFunctor

  -- Other library packages from which modules are imported.
  build-depends:       base              >=4.12   && <4.15,
                       time              >=1.8    && <1.9.4,
                       unix              >=2.7.2  && <2.8,
                       vector            >=0.12.0 && < 0.12.1,
                       vector-algorithms >= 0.8.0 && < 0.8.0.4

  -- Directories containing source files.
  -- hs-source-dirs:

  default-language:    Haskell2010

  ghc-options:         -Wall

  default-extensions:  NoImplicitPrelude

